modify class name from bx-category-title to bx-content-title.

--- a/app/views/bx_histories/_list.html.erb
+++ b/app/views/bx_histories/_list.html.erb
@@ -1,6 +1,6 @@
 <%# coding: utf-8 %>
 <div class="bx-content-box">
-  <%= bx_category_title("bx.label.history.list") %>
+  <%= bx_content_title("bx.label.history.list") %>
 <% if histories.empty? %>
   <p class="nodata"><%= l(:label_no_data) %></p>
 <% else %>
