--- a/assets/stylesheets/redmine_bx.css
+++ b/assets/stylesheets/redmine_bx.css
@@ -2,7 +2,7 @@
   padding-bottom: 20px;
 }
 
-.bx-category-title {
+.bx-content-title {
   width: 100%;
   padding: 1px 0;
   border-bottom: 1px dashed #888;
