--- a/assets/stylesheets/redmine_bx.css
+++ b/assets/stylesheets/redmine_bx.css
@@ -92,3 +92,17 @@
   width: 100%;
   padding: 2px 2px 2px 10px;
 }
+
+.bx-data-types {
+  padding: 0 0 0 180px;
+  margin: 0;
+  list-style-type: none;
+}
+
+.bx-data-types-unselected {
+  display: none;
+}
+
+.bx-data-types-selected {
+  display: block;
+}
