--- a/app/views/bx_table_defs/index.html.erb
+++ b/app/views/bx_table_defs/index.html.erb
@@ -11,6 +11,9 @@
   <p class="nodata"><%= l(:label_no_data) %></p>
 <% else %>
   <% @table_groups.each do |table_group| %>
+  <div class="bx-category">
+    <%= link_to table_group.name, project_bx_table_group_path(@project, table_group) %>
+  </div>
   <% end %>
 <% end %>
 <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
