--- a/app/views/bx_table_defs/index.html.erb
+++ b/app/views/bx_table_defs/index.html.erb
@@ -14,6 +14,12 @@
   <div class="bx-category">
     <%= link_to table_group.name, project_bx_table_group_path(@project, table_group) %>
   </div>
+    <% if table_group.table_defs.empty? %>
+  <p class="nodata"><%= l(:label_no_data) %></p>
+    <% else %>
+  <p class="bx-table-defs">
+  </p>
+    <% end %>
   <% end %>
 <% end %>
 <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
