--- a/app/views/bx_table_groups/show.html.erb
+++ b/app/views/bx_table_groups/show.html.erb
@@ -26,6 +26,47 @@
 <% if @table_group.common_column_defs.empty? %>
   <p class="nodata"><%= l(:label_no_data) %></p>
 <% else %>
+  <table class="bx-grid">
+    <thead>
+      <tr>
+        <th><%= l("bx.label.common_column_def.physical_name") %></th>
+        <th><%= l("bx.label.common_column_def.logical_name") %></th>
+        <th><%= l("bx.label.common_column_def.data_type") %></th>
+        <th><%= l("bx.label.common_column_def.size") %></th>
+        <th><%= l("bx.label.common_column_def.scale") %></th>
+        <th><%= l("bx.label.common_column_def.nullable") %></th>
+        <th><%= l("bx.label.common_column_def.default_value") %></th>
+        <th><%= l("bx.label.common_column_def.primary_key_number") %></th>
+        <th><%= l("bx.label.common_column_def.position_type") %></th>
+        <th><%= l("bx.label.common_column_def.note") %></th>
+  <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
+        <th>&nbsp;</th>
+  <% end %>
+      </tr>
+    </thead>
+    <tbody>
+  <% @table_group.common_column_defs.each do |common_column_def| %>
+      <tr>
+        <td><%= common_column_def.physical_name %></td>
+        <td><%= common_column_def.logical_name %></td>
+        <td><%= common_column_def.data_type.name %></td>
+        <td class="bx-number-column"><%= common_column_def.size %></td>
+        <td class="bx-number-column"><%= common_column_def.scale %></td>
+        <td class="bx-icon-column"><%= image_tag "#{common_column_def.nullable}.png" %></td>
+        <td><%= common_column_def.default_value %></td>
+        <td><%= common_column_def.primary_key_number %></td>
+        <td><%= common_column_def.position_type %></td>
+        <td><%= common_column_def.note %></td>
+    <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
+        <td class="bx-column-commands">
+          <%= link_to l(:button_edit), edit_project_bx_common_column_def_path(@project, common_column_def), :class => 'icon icon-edit' %>
+          <%= delete_link project_bx_common_column_def_path(@project, common_column_def) %>
+        </td>
+    <% end %>
+      </tr>
+  <% end %>
+    </tbody>
+  </table>
 <% end %>
 <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
   <p><%= link_to l("bx.label.common_column_def.new"), new_project_bx_table_group_common_column_def_path(@project, @table_group), :class => 'icon icon-add' %></p>
