--- a/assets/stylesheets/redmine_bx.css
+++ b/assets/stylesheets/redmine_bx.css
@@ -106,3 +106,11 @@
 .bx-data-types-selected {
   display: block;
 }
+
+table.bx-grid { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 100%; margin-bottom: 4px; }
+table.bx-grid th { background-color:#EEEEEE; padding: 4px; white-space:nowrap; border: 1px solid #e4e4e4; }
+table.bx-grid td { vertical-align: top; padding-right:10px; border: 1px solid #e4e4e4; }
+
+.bx-number-column { text-align: right; width: 8%; }
+.bx-icon-column { text-align: center; width: 5%; }
+.bx-column-commands { width: 10%; }
