--- a/assets/stylesheets/redmine_bx.css
+++ b/assets/stylesheets/redmine_bx.css
@@ -1,38 +1,9 @@
-.bx-content-box {
-  padding-bottom: 20px;
-}
+.bx-content-box { padding-bottom: 20px; }
+.bx-content-title { width: 100%; padding: 1px 0; border-bottom: 1px dashed #888; }
 
-.bx-content-title {
-  width: 100%;
-  padding: 1px 0;
-  border-bottom: 1px dashed #888;
-}
-
-.bx-informations {
-  margin-left: 10px;
-}
-
-.bx-informations dt {
-  width: 120px;
-  font-weight: bold;
-  float: left;
-  clear: both;
-  padding: 3px 0;
-}
-
-.bx-informations dd {
-  margin-left: 120px;
-  padding: 3px 0;
-}
-
-.bx-informations ul {
-  margin :0;
-  padding: 0;
-}
-
-.bx-informations ul li {
-  padding: 1px 0;
-}
+.bx-informations { margin-left: 10px; }
+.bx-informations th { text-align: right; vertical-align: top; min-width: 120px; padding: 3px 5px 3px 0; }
+.bx-informations ul { margin: 0; padding: 0 0 0 2em; }
 
 .bx-category {
   padding: 5px;
@@ -62,50 +33,19 @@
   -o-border-radius: 3px;
 }
 
-.bx-resource-values-empty {
-  background-color: #dcdcdc;
-}
+.bx-resource-values-empty { background-color: #dcdcdc; }
+.bx-resource-values-full { background-color: #468847; }
+.bx-resource-values-partiality { background-color: #b94a48; }
 
-.bx-resource-values-full {
-  background-color: #468847;
-}
+.bx-resource-node-link { vertical-align: middle; }
 
-.bx-resource-values-partiality {
-  background-color: #b94a48;
-}
+.bx-resource-values { width: 100%; }
+.bx-resource-values th { text-align: left; white-space: nowrap; padding: 2px; }
+.bx-resource-values td { width: 100%; padding: 2px 2px 2px 10px; }
 
-.bx-resource-node-link {
-  vertical-align: middle;
-}
-
-.bx-resource-values {
-  width: 100%;
-}
-
-.bx-resource-values th {
-  text-align: left;
-  white-space: nowrap;
-  padding: 2px;
-}
-
-.bx-resource-values td {
-  width: 100%;
-  padding: 2px 2px 2px 10px;
-}
-
-.bx-data-types {
-  padding: 0 0 0 180px;
-  margin: 0;
-  list-style-type: none;
-}
-
-.bx-data-types-unselected {
-  display: none;
-}
-
-.bx-data-types-selected {
-  display: block;
-}
+.bx-data-types { padding: 0 0 0 180px; margin: 0; list-style-type: none; }
+.bx-data-types-unselected { display: none; }
+.bx-data-types-selected { display: block; }
 
 table.bx-grid { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 100%; margin-bottom: 4px; }
 table.bx-grid th { background-color:#EEEEEE; padding: 4px; white-space:nowrap; border: 1px solid #e4e4e4; }
