--- a/assets/stylesheets/redmine_bx.css
+++ b/assets/stylesheets/redmine_bx.css
@@ -51,6 +51,11 @@ table.bx-grid { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 10
 table.bx-grid th { background-color:#EEEEEE; padding: 4px; white-space:nowrap; border: 1px solid #e4e4e4; }
 table.bx-grid td { vertical-align: top; padding-right:10px; border: 1px solid #e4e4e4; }
 
-.bx-number-column { text-align: right; width: 8%; }
-.bx-icon-column { text-align: center; width: 5%; }
-.bx-column-commands { width: 10%; }
+.bx-number-cell { text-align: right; width: 8%; }
+.bx-icon-cell { text-align: center; width: 5%; }
+.bx-command-cell { width: 10%; }
+
+.bx-reorder-column { width: 46px; }
+.bx-reorder-disable { display: inline-block; vertical-align: middle; width: 16px; height: 16px; }
+.bx-reorder-up { background-image: url(/images/1uparrow.png); }
+.bx-reorder-down { background-image: url(/images/1downarrow.png); }
