--- a/app/views/bx_table_groups/show.html.erb
+++ b/app/views/bx_table_groups/show.html.erb
@@ -71,12 +71,12 @@
       <% if common_column_def == @table_group.common_header_column_defs.first || common_column_def == @table_group.common_footer_column_defs.first %>
           <span class="bx-reorder-disable"></span>
       <% else %>
-          <a href="#" class="icon bx-reorder-up"></a>
+          <%= link_to("", up_project_bx_common_column_def_path(@project, common_column_def), :method => :put, :class => "icon bx-reorder-up") %>
       <% end %>
       <% if common_column_def == @table_group.common_header_column_defs.last || common_column_def == @table_group.common_footer_column_defs.last %>
           <span class="bx-reorder-disable"></span>
       <% else %>
-          <a href="#" class="icon bx-reorder-down"></a>
+          <%= link_to("", down_project_bx_common_column_def_path(@project, common_column_def), :method => :put, :class => "icon bx-reorder-down") %>
       <% end %>
         </td>
         <td>
