--- a/app/views/bx_table_defs/new.html.erb
+++ b/app/views/bx_table_defs/new.html.erb
@@ -1,1 +1,13 @@
-<h2>BxTableDefsController#new</h2>
+<%# coding: utf-8 %>
+<%= bx_title %>
+
+<%= bx_tabs params[:tab] %>
+
+<div class="tab-content">
+  <%= error_messages_for @form %>
+  <%= labelled_form_for :form, @form, :url => project_bx_table_group_table_defs_path(@project, @table_group) do |f| %>
+    <%= render :partial => "form", :locals => { :f => f, :form => @form, :common_column_defs => @table_group.common_column_defs } %>
+    <%= f.submit l(:button_create) %>
+    <%= link_to l(:button_cancel), project_bx_table_group_path(@project, @table_group) %>
+  <% end %>
+</div>
