--- a/app/views/bx_table_groups/_form.html.erb
+++ b/app/views/bx_table_groups/_form.html.erb
@@ -6,7 +6,7 @@
   <p>
     <label for="data_types"><%= bx_form_label(form, "data_types") %></label>
   <% databases.each do |database| %>
-    <ul id="bx_data_types_<%= database.id %>" class="bx-data-types">
+    <ul id="bx_data_types_<%= database.id %>" class="bx-data-types bx-labelled-list">
     <% database.data_types.each do |data_type| %>
       <li>
         <%= check_box_tag "form[data_types][]", data_type.id, false, { :id => "form_data_types_#{data_type.id}", "data-default-checked" => data_type.default_use? } %>
