--- a/assets/stylesheets/redmine_bx.css
+++ b/assets/stylesheets/redmine_bx.css
@@ -5,6 +5,8 @@
 .bx-informations th { text-align: right; vertical-align: top; min-width: 120px; padding: 3px 5px 3px 0; }
 .bx-informations ul { margin: 0; padding: 0 0 0 2em; }
 
+.bx-labelled-list { padding: 0 0 0 180px; margin: 0; list-style-type: none; }
+
 .bx-category {
   padding: 5px;
   background-color: #f0f8ff;
@@ -43,7 +45,6 @@
 .bx-resource-values th { text-align: left; white-space: nowrap; padding: 2px; }
 .bx-resource-values td { width: 100%; padding: 2px 2px 2px 10px; }
 
-.bx-data-types { padding: 0 0 0 180px; margin: 0; list-style-type: none; }
 .bx-data-types-unselected { display: none; }
 .bx-data-types-selected { display: block; }
 
