--- a/app/views/bx_table_groups/show.html.erb
+++ b/app/views/bx_table_groups/show.html.erb
@@ -68,15 +68,15 @@
         <td><%= bx_note(common_column_def.note) %></td>
     <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
         <td>
-      <% if common_column_def == @table_group.common_header_column_defs.first || common_column_def == @table_group.common_footer_column_defs.first %>
-          <span class="bx-reorder-disable"></span>
-      <% else %>
+      <% if common_column_def.can_up? %>
           <%= link_to("", up_project_bx_common_column_def_path(@project, common_column_def), :method => :put, :class => "icon bx-reorder-up") %>
-      <% end %>
-      <% if common_column_def == @table_group.common_header_column_defs.last || common_column_def == @table_group.common_footer_column_defs.last %>
-          <span class="bx-reorder-disable"></span>
       <% else %>
+          <span class="bx-reorder-disable"></span>
+      <% end %>
+      <% if common_column_def.can_down? %>
           <%= link_to("", down_project_bx_common_column_def_path(@project, common_column_def), :method => :put, :class => "icon bx-reorder-down") %>
+      <% else %>
+          <span class="bx-reorder-disable"></span>
       <% end %>
         </td>
         <td>
