--- a/app/views/bx_table_defs/_form.html.erb
+++ b/app/views/bx_table_defs/_form.html.erb
@@ -3,6 +3,7 @@
 <div class="box tabular">
   <p><%= f.text_field :physical_name, :label => bx_form_label(form, :physical_name), :required => true %></p>
   <p><%= f.text_field :logical_name, :label => bx_form_label(form, :logical_name) %></p>
+<% if common_column_defs.present? %>
   <p>
     <label for="using_common_column_defs"><%= bx_form_label(form, "using_common_column_defs") %></label>
     <ul class="bx-labelled-list">
@@ -14,6 +15,7 @@
     <% end %>
     </ul>
   </p>
+<% end %>
   <p><%= f.text_area :description, :label => bx_form_label(form, :description), :size => "80x5" %></p>
   <p><%= f.text_field :relational_issues, :label => l("bx.label.relational_issues") %></p>
 </div>
