--- a/app/views/bx_table_defs/show.html.erb
+++ b/app/views/bx_table_defs/show.html.erb
@@ -6,6 +6,8 @@
 <div class="bx-content-box">
   <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
     <div class="contextual">
+      <%= link_to l(:button_edit), edit_project_bx_table_def_path(@project, @table_def), :class => 'icon icon-edit' %>
+      <%= delete_link project_bx_table_def_path(@project, @table_def) %>
     </div>
   <% end %>
   <%= bx_content_title("bx.label.table_def.information") %>
