--- a/app/views/bx_resource_categories/show.html.erb
+++ b/app/views/bx_resource_categories/show.html.erb
@@ -7,7 +7,7 @@
   <% if User.current.allowed_to?(:manage_bx_resource_nodes, @project) %>
     <div class="contextual">
       <%= link_to l("bx.label.resource.add"), new_project_bx_resource_path(@project, :category_id => @category), :class => 'icon icon-duplicate' %>
-      <%= link_to l(:button_edit), edit_project_bx_category_path(@project, @category), :class => 'icon icon-edit', :accesskey => accesskey(:edit) %>
+      <%= link_to l(:button_edit), edit_project_bx_category_path(@project, @category), :class => 'icon icon-edit' %>
       <%= delete_link project_bx_category_path(@project, @category) %>
     </div>
   <% end %>
@@ -46,7 +46,7 @@
         <td><%= branch.name %></td>
         <td>
     <% if User.current.allowed_to?(:manage_bx_resource_nodes, @project) %>
-          <%= link_to l(:button_edit), edit_project_bx_branch_path(@project, branch), :class => 'icon icon-edit', :accesskey => accesskey(:edit) %>
+          <%= link_to l(:button_edit), edit_project_bx_branch_path(@project, branch), :class => 'icon icon-edit' %>
           <%= delete_link project_bx_branch_path(@project, branch) %>
     <% end %>
         </td>
