--- a/app/views/bx_resources/show.html.erb
+++ b/app/views/bx_resources/show.html.erb
@@ -7,7 +7,7 @@
   <% if User.current.allowed_to?(:manage_bx_resource_nodes, @project) %>
     <div class="contextual">
       <%= link_to l("bx.label.resource.add"), new_project_bx_resource_path(@project, :parent_id => @resource), :class => 'icon icon-duplicate' %>
-      <%= link_to l(:button_edit), edit_project_bx_resource_path(@project, @resource), :class => 'icon icon-edit', :accesskey => accesskey(:edit) %>
+      <%= link_to l(:button_edit), edit_project_bx_resource_path(@project, @resource), :class => 'icon icon-edit' %>
       <%= delete_link project_bx_resource_path(@project, @resource) %>
     </div>
   <% end %>
