--- a/app/views/bx_table_defs/show.html.erb
+++ b/app/views/bx_table_defs/show.html.erb
@@ -42,7 +42,7 @@
         <th><%= l("bx.label.column_def.scale") %></th>
         <th><%= l("bx.label.column_def.nullable") %></th>
         <th><%= l("bx.label.column_def.default_value") %></th>
-        <th><%= l("bx.label.column_def.reference_column") %></th>
+        <th><%= l("bx.label.column_def.reference_column_def") %></th>
         <th><%= l("bx.label.column_def.primary_key_number") %></th>
         <th><%= l("bx.label.column_def.note") %></th>
   <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
@@ -61,7 +61,7 @@
         <td class="bx-number-cell"><%= column_def.scale %></td>
         <td class="bx-icon-cell"><%= image_tag "#{column_def.nullable}.png" %></td>
         <td><%= column_def.default_value %></td>
-        <td><%= column_def.reference_column.try(:full_physical_name) %></td>
+        <td><%= column_def.reference_column_def.try(:full_physical_name) %></td>
         <td class="bx-number-cell"><%= column_def.primary_key_number %></td>
         <td><%= bx_note(column_def.note) %></td>
     <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
