--- a/app/views/bx_column_defs/new.html.erb
+++ b/app/views/bx_column_defs/new.html.erb
@@ -11,6 +11,7 @@
                                                 :data_types => @table_def.table_group.data_types,
                                                 :table_defs => @table_defs } %>
     <%= f.submit l(:button_create) %>
+    <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
     <%= link_to l(:button_cancel), project_bx_table_def_path(@project, @table_def) %>
   <% end %>
 </div>
