--- a/app/views/bx_table_defs/show.html.erb
+++ b/app/views/bx_table_defs/show.html.erb
@@ -44,6 +44,7 @@
         <th><%= l("bx.label.column_def.default_value") %></th>
         <th><%= l("bx.label.column_def.reference_column_def") %></th>
         <th><%= l("bx.label.column_def.primary_key_number") %></th>
+        <th><%= l("bx.label.column_def.common_column_def") %></th>
         <th><%= l("bx.label.column_def.note") %></th>
   <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
         <th class="bx-reorder-column">&nbsp;</th>
@@ -63,6 +64,7 @@
         <td><%= column_def.default_value %></td>
         <td><%= column_def.reference_column_def.try(:full_physical_name) %></td>
         <td class="bx-number-cell"><%= column_def.primary_key_number %></td>
+        <td><%= column_def.common_column_def.try(:position_type) %></td>
         <td><%= bx_note(column_def.note) %></td>
     <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
         <td>
