--- a/app/views/bx_column_defs/edit.html.erb
+++ b/app/views/bx_column_defs/edit.html.erb
@@ -1,2 +1,16 @@
 <%# coding: utf-8 %>
-<h2>BxColumnDefsController#edit</h2>
+<%= bx_title %>
+
+<%= bx_tabs params[:tab] %>
+
+<div class="tab-content">
+  <%= error_messages_for @form %>
+  <%= labelled_form_for :form, @form, :url => project_bx_column_def_path(@project, @column_def), :method => :put do |f| %>
+    <%= render :partial => "form", :locals => { :f => f,
+                                                :form => @form,
+                                                :data_types => @column_def.table_def.table_group.data_types,
+                                                :table_defs => @table_defs } %>
+    <%= f.submit l(:button_update) %>
+    <%= link_to l(:button_cancel), project_bx_table_def_path(@project, @column_def.table_id) %>
+  <% end %>
+</div>
