--- a/app/views/bx_table_defs/index.html.erb
+++ b/app/views/bx_table_defs/index.html.erb
@@ -18,6 +18,7 @@
   <p class="nodata"><%= l(:label_no_data) %></p>
     <% else %>
   <p class="bx-table-defs">
+    <%= render :partial => "bx_table_defs/list", :locals => { :table_defs => table_group.table_defs } %>
   </p>
     <% end %>
   <% end %>
