--- a/assets/stylesheets/redmine_bx.css
+++ b/assets/stylesheets/redmine_bx.css
@@ -49,8 +49,13 @@
 .bx-data-types-selected { display: block; }
 
 table.bx-grid { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 100%; margin-bottom: 4px; }
-table.bx-grid th { background-color:#EEEEEE; padding: 4px; white-space:nowrap; border: 1px solid #e4e4e4; }
+table.bx-grid th { background-color:#eeeeee; padding: 4px; white-space:nowrap; border: 1px solid #e4e4e4; }
 table.bx-grid td { vertical-align: top; padding-right:10px; border: 1px solid #e4e4e4; }
+table.bx-grid tbody tr:hover { background-color:#ffffdd; }
+
+table.bx-multi-column-list { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 100%; margin-bottom: 4px; }
+table.bx-multi-column-list tbody td { vertical-align: top; padding-right:10px; border: 1px solid #e4e4e4; width: 33%; padding: 5px }
+table.bx-multi-column-list tbody td:hover { background-color:#ffffdd; }
 
 .bx-number-cell { text-align: right; width: 8%; }
 .bx-icon-cell { text-align: center; width: 5%; }
