--- a/app/views/bx_table_defs/show.html.erb
+++ b/app/views/bx_table_defs/show.html.erb
@@ -90,7 +90,6 @@
   <% end %>
     </tbody>
   </table>
-  <div id="bx_note_dialog" class="bx-note-dialog"></div>
 <% end %>
 <% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
   <p><%= link_to l("bx.label.column_def.new"), new_project_bx_table_def_column_def_path(@project, @table_def), :class => 'icon icon-add' %></p>
@@ -98,5 +97,16 @@
 </div>
 
 <%# TODO: indexes %>
+<div class="bx-content-box">
+  <%= bx_content_title("bx.label.index_def.list") %>
+<% if @table_def.index_defs.empty? %>
+  <p class="nodata"><%= l(:label_no_data) %></p>
+<% else %>
+<% end %>
+<% if User.current.allowed_to?(:manage_bx_table_defs, @project) %>
+  <p><%= link_to l("bx.label.index_def.new"), new_project_bx_table_def_index_def_path(@project, @table_def), :class => 'icon icon-add' %></p>
+<% end %>
+</div>
 
 <%= render :partial => "bx_histories/list", :locals => { :histories => @table_def.histories } %>
+<div id="bx_note_dialog" class="bx-note-dialog"></div>
